# openfusion

./: Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  CLAWPATCH_NOTES.md  DISTRIBUTION.md
skills/openfusion-consensus/: SKILL.md
src/: main.rs
templates/: openfusion.toml
tests/: cli.rs
