[package]
name = "openfusion"
version = "0.1.0"
edition = "2024"
description = "Best-of-N and consensus CLI for multiple LLM backends"
license = "MIT"
repository = "https://github.com/nachoiacovino/openfusion"
readme = "README.md"
keywords = ["llm", "consensus", "cli", "openrouter", "agents"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3.0"
dirs = "6.0"
futures = "0.3"
keyring = { version = "3", default-features = false, features = ["apple-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3.15"
tokio = { version = "1.43", features = ["full"] }
toml = "0.9"
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6"
